infra/k8s/incident-intelligence-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-intelligence-service
  namespace: aegiscloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incident-intelligence-service
  template:
    metadata:
      labels:
        app: incident-intelligence-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8083"
    spec:
      containers:
        - name: incident-intelligence-service
          image: aegiscloud/incident-intelligence-service:0.1.0
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: incident-intelligence-service
  namespace: aegiscloud
spec:
  selector:
    app: incident-intelligence-service
  ports:
    - port: 8083
      targetPort: 8083
