infra/k8s/monitoring-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-service
  namespace: aegiscloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monitoring-service
  template:
    metadata:
      labels:
        app: monitoring-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8081"
    spec:
      containers:
        - name: monitoring-service
          image: aegiscloud/monitoring-service:0.1.0
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-service
  namespace: aegiscloud
spec:
  selector:
    app: monitoring-service
  ports:
    - port: 8081
      targetPort: 8081
